@@ -1,3 +1,5 @@
+2006-10-06:
+	- fix source.list rewrite corner case bug (#64159)
 2006-10-04:
 	- improve the space checking/logging
 2006-09-29:
